trunk/Archive2/6a/5e1280e4975ba9/output
main.cpp:33:29: error: use 'template' keyword to treat 'instantiate' as a dependent template name
        typename prev_type::instantiate<func_t>; // <<--- error
                            ^
                            template 
1 error generated.
